fix: csv parasm
